Fixes horizontal scrolling issue caused by new members section

--- a/scss/base/_index.scss
+++ b/scss/base/_index.scss
@@ -27,6 +27,10 @@ body {
     background-color: lightgray;
 }
 
+.main-container {
+    width: 100vw;
+}
+
 svg {
     fill: $font-accent-color;
     width: 25px;
